# openshift-ai-observability-summarizer

./: .gitignore  CONTRIBUTING.md  DEVELOPER_INSIGHTS.md  Makefile  PURE_MCP_ARCHITECTURE.md  README.md  pyproject.toml  test_claude_desktop_features.py  test_pure_mcp.py  test_select_best_metric.py
.cursor/: CURSOR_INTEGRATION.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-push.yml  deploy.yaml  deploy.yml  rebase-check.yml  run_tests.yml  undeploy.yml
deploy/helm/: Makefile  default-model.json.template  model-config.json
deploy/helm/alerting/: Chart.yaml  values.yaml
deploy/helm/alerts/: values.yaml
deploy/helm/llm-service/: Chart.yaml  values.yaml
deploy/helm/mcp-server/: Chart.yaml  values.yaml
deploy/helm/metric-mcp/: Chart.yaml  values.yaml
deploy/helm/metric-summarizer/: Chart.yaml  values.yaml
deploy/helm/metric-ui/: Chart.yaml  values.yaml
deploy/helm/metrics-api/: Chart.yaml  (+1 more)
docs/: DEV_GUIDE.md  GITHUB_ACTIONS.md  HELM_CHARTS.md  OBSERVABILITY_OVERVIEW.md  SEMANTIC_VERSIONING.md  response_validation_guide.md
examples/: response_validation_usage.py
metric-ui/: Dockerfile  app2.py
metric-ui/alerting/: Makefile  alert_receiver.py
metric-ui/alerts/: Containerfile  alert_receiver.py
metric-ui/k8s/: deployment.yaml
metric-ui/mcp/: Dockerfile  mcp.py  requirements.txt
metric-ui/ui/: Dockerfile  ui.py
metric_ui/alerting/: Dockerfile  alert_receiver.py
metric_ui/api/: Dockerfile  mcp.py  requirements.txt
metric_ui/core/: __init__.py  config.py  llm_client.py  metrics.py  reports.py
metric_ui/k8s/: service.yaml
metric_ui/mcp/: mcp.py  requirements.txt
metric_ui/ui/: ui.py
preprocessing/: Dockerfile  main.py  requirements.txt
scripts/: check-observability-drift.sh  generate-model-config.sh  local-dev.sh  ocp-setup.sh
scripts/ocp_config/: github-actions-rbac.yml  sa_token_secret.yml
src/: mcp_log.txt
src/alerting/: Dockerfile  Makefile  alert_receiver.py
src/api/: Dockerfile  mcp.py  metrics_api.py  requirements.txt
src/common/: pylogger.py
src/core/: __init__.py  alerts.py  analysis.py  chat_with_prometheus.py  config.py  llm_client.py  llm_summary_service.py  metrics.py  models.py  promql_service.py  reports.py  response_validator.py  thanos_service.py
src/mcp_server/: Dockerfile  README.md  __init__.py  api.py  claude_integration.py  cli.py  debug_stdio.py  env.template  exceptions.py  main.py  mcp.py  observability_mcp.py  requirements.txt  settings.py  setup.py  setup_integration.py  simple_stdio.py  stdio_server.py  working_stdio.py
src/ui/: Dockerfile  error_handler.py  mcp_client_helper.py  requirements.txt  test_mcp_integration.py  ui.py
summarization/: Dockerfile  main.py  openai_client.py  prompt_template.j2  requirements.txt
tests/: test_response_validation.py
tests/alerting/: alert_receiver_test.py  test_alert_receiver.py
tests/api/: test_api_endpoints.py  test_integration.py  test_pure_functions.py
tests/common/: test_pylogger.py
tests/core/: test_alerts.py  test_chat_with_prometheus.py  test_choose_prometheus_step.py  test_config_and_models.py  test_llm_summary_service.py  test_promql_service.py  test_reports.py
tests/mcp/: test_api_endpoints.py  test_integration.py  test_pure_functions.py  test_response_validation.py
tests/mcp_server/: test_api.py  test_claude_integration.py  test_main.py  test_mcp.py  test_observability_mcp_enhanced.py  test_openshift_tools.py  test_prometheus_tools.py  test_prometheus_tools_enhanced.py  test_settings.py  test_tempo_tools.py  test_tools.py  test_tools_openshift.py  test_utils_pylogger.py  test_vllm_tools.py
tests/ui/: test_claude_desktop_ui.py  test_mcp_client_helper.py
(+84 files in other folders)
