[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metric_ui"
version = "0.1.0"
description = "AI Observability Metric Summarizer"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0", 
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "markdown>=3.4.0",
    "llama-stack-client",
    "fire",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0", 
    "httpx>=0.24.0",
    "pytest-cov>=4.0.0",  
    "black>=23.0.0",      
    "ruff>=0.1.0",        
]

[dependency-groups]
dev = [
    "fastapi>=0.116.1",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]

[tool.coverage.run]
source = ["metric_ui"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/__init__.py",
    "metric_ui/mcp/report_assets/report_config.py",
    "metric_ui/mcp/report_assets/report_renderer.py",
    "metric_ui/ui/ui.py",
]

[tool.coverage.report]

show_missing = false
