[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metric_ui"
version = "0.1.0"
description = "AI Observability Metric Summarizer"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.116.1",
    "pydantic>=2.0.0",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "numpy>=1.24.0",
    "markdown>=3.8.2",
    "dateparser>=1.2.2",
    "llama-stack-client>=0.2.12",
    "fire>=0.7.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "matplotlib>=3.10.3",
    "streamlit>=1.47.0",
    "uvicorn>=0.35.0",
    "weasyprint>=65.1",
]

[tool.coverage.run]
source = ["metric_ui"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/__init__.py",
    "metric_ui/api/report_assets/report_config.py",
    "metric_ui/api/report_assets/report_renderer.py",
    "metric_ui/ui/ui.py",
]

[tool.coverage.report]

show_missing = false
